--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8080
+serverport=8080
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:
+spring.datasource.url=jdbc:postgresql://localhost:5432/GymRoutine
 spring.datasource.username=toni
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
