--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-serverport=8080
+server.port=8080
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/GymRoutine
 spring.datasource.username=toni
